--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
