--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,19 +1,19 @@
 header {
   background-color: #80001C;
-  padding: 10px 20px; 
+  padding-top: 0;
 }
 
 .header-container {
   background-color: #80001C;
   display: flex;
-  color: #fff;
+  color: #ffffff;
   justify-content: space-between;
   /* align-items: center; */
   font-size: 25px; 
   font-weight: 700;
   max-width: 1200px;
-  margin: 5px auto;
-  height: 30px;
+  margin: 10px auto;
+  height: 100px;
   font-family: 'Montserrat', sans-serif;
 }
 /* .nav-link, .nav-text {
