--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -1,7 +1,9 @@
 .main {
   max-width: 400px;
-  margin: 37px auto;
+  height:100%;
+  margin: 40px auto;
   padding: 32px;
+  margin-bottom: 50px;
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 10px;
