--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -1,25 +1,18 @@
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f9f9f9;
-  padding: 40px 0;
+  padding: 2px 0;
 }
-
-.register-container {
-  max-width: 400px;
-  margin: auto;
-  background: #ffffff;
-  padding: 32px 24px;
-  border-radius: 12px;
-  border: 1px solid #eee;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+main{
+  height: 100%;
 }
 
 .form-title {
   text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 24px;
-  color: #111;
+  font-size: 24px;
+  font-weight: bold;
+  /* color: #80001C; */
+  margin-bottom: 24
 }
 
 .register-form label {
@@ -32,8 +25,8 @@ body {
 
 .register-form input {
   width: 100%;
-  padding: 10px 12px;
-  margin-bottom: 16px;
+  padding: 10px 8px;
+  margin-bottom: 2px;
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -46,7 +39,9 @@ body {
   outline: none;
   box-shadow: 0 0 0 1px #87002A33;
 }
-
+.register-form button{
+  margin-left: 50px;;
+}
 .required {
   color: #87002A;
 }
@@ -68,12 +63,11 @@ body {
 }
 
 .login-redirect {
-  text-align: center;
-  margin-top: 24px;
+  margin-top: 10px;
 }
 
 .login-btn {
-  margin-top: 8px;
+  margin-top: 2px;
   padding: 8px 16px;
   border: 1px solid #87002A;
   color: #87002A;
@@ -83,7 +77,7 @@ body {
   cursor: pointer;
 }
 
-.login-btn:hover {
+.login-btn-registerpage:hover {
   background-color: #87002A;
   color: #fff;
 }
