--- a/src/assets/styles/AddProduct.css
+++ b/src/assets/styles/AddProduct.css
@@ -27,6 +27,8 @@
   border: 1px solid #ffffff;
   font-style: italic;
   color: #a3a3a3;
+  margin-top: 15px;
+  margin-left: 400px;
 }
 #add-product-form input,
 #add-product-form textarea,
