--- a/src/assets/styles/Cart.css
+++ b/src/assets/styles/Cart.css
@@ -8,34 +8,53 @@
   /* text-align: center; */
   margin: 40px auto;
   padding: 0 20px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-cart-container;
+  height: 100%;
+  margin-bottom: 70px;
+}
+
+.empty-cart {
+  height: 100%;
+  margin-top: 250px;
+  margin-bottom: 280px;
+}
+
+main {
   height: 100%;
 }
 
+.cart-container {
+  height: 100%;
+
+}
+
 .cart-table {
-  width: 850px;
+  height: auto;
+  width: 900px;
   /* min-width: 700px; */
   border-collapse: collapse;
   font-family: 'Montserrat', sans-serif;
   background-color: white;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
   overflow: hidden;
 }
 
+thread {
+  width: auto;
+  padding: 20px;
+}
+
 .cart-table th {
-  /* background-color: #f0f0f0;
-  color: #000000; */
-  /* margin-left: 20px; */
-    background-color: #f0f0f0;
-    color: #000000;
-    text-align: center; 
-    padding: 12px;
-    font-weight: 600;
+  background-color: #f0f0f0;
+  color: #000000;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
 }
 
 .cart-table td {
-  padding: 12px;
+  padding: 15px;
   border-bottom: 1px solid #ddd;
   text-align: center;
 }
@@ -45,21 +64,39 @@
   height: 120px;
   object-fit: cover;
   border-radius: 4px;
+
+}
+
+.cart-table td button {
+  padding: auto;
+  border: 1px solid #949494;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin: 0 3px;
+  font-family: inherit;
+  background-color: white;
+  color: #949494;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.cart-table td span {
+  padding: 10px;
 }
 
 .information-check-cart {
   display: flex;
   flex-direction: column;
-  /* flex: 0 0 35%;; */
-  width: 350px;
-  /* width: 200px; */
+  width: 300px;
+  height: 50%;
   background-color: #fdfdfd;
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
-.textdelivery{
+
+.textdelivery {
   /* margin-top: 10px; */
   color: #80001C;
   text-align: center;
@@ -67,6 +104,7 @@
 
 .text-information-check-cart {
   font-size: 22px;
+  font-style: bold;
   margin-bottom: 20px;
   color: #80001C;
   text-align: center;
@@ -94,24 +132,27 @@
   font-size: 18px;
   color: #000;
 }
+
 #cart-list {
   flex: 0 0 50%;
 }
+
 #payment-btn {
   margin-top: 24px;
-  background-color: #3C3C43;
-  color: white;
-  border: none;
+  background-color: #ffffff;
+  color: #80001C;
   padding: 8px 12px;
   font-size: 16px;
   font-weight: 600;
   border-radius: 6px;
   cursor: pointer;
+  border: 1px solid #80001C;
   transition: background 0.3s ease;
 }
 
 #payment-btn:hover {
   background-color: #80001C;
+  color: #ffffff;
 }
 
 .text-cart {
@@ -125,5 +166,23 @@
 .text-empty {
   font-size: 32px;
   text-align: center;
-  color: #999;
+  color: #80001C;
+  font-style: bold;
+}
+
+#delete-cart-btn {
+  margin-top: 24px;
+  background-color: #3C3C43;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+#delete-cart-btn:hover {
+  background-color: #80001C;
 }
