--- a/src/assets/styles/DetailProduct.css
+++ b/src/assets/styles/DetailProduct.css
@@ -1,103 +1,122 @@
 .product-detail-container {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    max-width: 960px; 
-    margin: 20px auto;
-    border: 0.25px solid #ffffff; 
-    border-radius: 4px; 
-    background-color: #ffffff; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    font-family: 'Montserrat', sans-serif; }
-  
-  .product-detail-container h1 {
-    color: #333;
-    margin-bottom: 25px; 
-    text-align: center;
-    font-size: 40px; 
-  }
-  
-  .product-detail-container h2 {
-    color: #b3754d;
-    margin-bottom: 15px;
-    font-size: 1.8em; 
-  }
-  
-  .product-detail-container img {
-    max-width: 100%;
-    height: 350px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px; 
-    display: block; 
-  }
-  
-  .product-detail-container p {
-    margin-bottom: 12px;
-    line-height: 1.7; 
-    color: #666; 
-    font-size: 1em;
-  }
-  
-  .product-detail-container strong {
-    font-weight: bold;
-    color: #333; 
-  }
-  .flex-information{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  max-width: 960px;
+  margin: 20px auto;
+  border: 0.25px solid #ffffff;
+  border-radius: 4px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: 'Montserrat', sans-serif;
+}
 
-  }
-  /* .product-detail-container p {
+.product-detail-container h1 {
+  color: #333;
+  margin-bottom: 25px;
+  text-align: center;
+  font-size: 40px;
+}
+
+.product-detail-container h2 {
+  color: #b3754d;
+  margin-bottom: 15px;
+  font-size: 1.8em;
+}
+
+.product-detail-container img {
+  max-width: 100%;
+  height: 350px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  display: block;
+}
+
+.product-detail-container p {
+  margin-bottom: 12px;
+  line-height: 1.7;
+  color: #666;
+  font-size: 1em;
+}
+
+.product-detail-container strong {
+  font-weight: bold;
+  color: #333;
+}
+
+.flex-information {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+
+}
+
+/* .product-detail-container p {
     margin-bottom: 10px;
     line-height: 1.6;
   } */
-  .flex-information-text {
-    width: 610px;
-    display: flex;
-    flex-direction: column;}
-   .flex-information-img{
-    width:350px ;
-   }
-   .flex-information-text p{
-    margin-left: 50px;
-   }
-   .flex-information-text h2{
-    margin-left: 30px;
-    color:#3C3C43;
-   }
-   .add-cart-btn-detail {
-    width: 80%;
-    padding: 10px;
-    background-color: #666;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 600;
-    display: block;
-    margin: auto auto;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  .back-btn{
-    width: 15%;
-    border-radius: 0%;
-    background-color: #ffffff; 
-    border: 1px solid #ffffff;
-    font-style: italic;
-    color: #a3a3a3;
-  }
-  .add-product-btn-detail:hover {
-    background-color: #995f3a;
-  }
-  /* .productname{
+.flex-information-text {
+  width: 610px;
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-information-img {
+  width: 350px;
+}
+
+.flex-information-text p {
+  margin-left: 50px;
+}
+
+.flex-information-text h2 {
+  margin-left: 30px;
+  color: #3C3C43;
+}
+
+.text-productname {
+  margin-top: 20px;
+  color: #333;
+  margin-bottom: 25px;
+  text-align: center;
+  font-size: 40px;
+}
+
+.add-cart-btn-detail {
+  width: 80%;
+  padding: 10px;
+  background-color: #666;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  display: block;
+  margin: auto auto;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.back-btn {
+  width: 15%;
+  border-radius: 0%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  font-style: italic;
+  color: #a3a3a3;
+}
+
+.add-product-btn-detail:hover {
+  background-color: #995f3a;
+}
+
+/* .productname{
     color:#3C3C43;
   } */
-  /*
+/*
   .product-detail-container img {
     max-width: 100%;
     height: auto;
